--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.5",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
